# AOE-Calculator

./: .gitignore  AOE.cpp  AOE.h  CMakeLists.txt  Dialog.cpp  Dialog.h  LICENSE  Line.cpp  Line.h  README.md  Shape.cpp  Shape.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcanvas.cpp  qcanvas.h  ui_mainwindow.h
